fix: right align talk speed better

--- a/client/src/components/Stat/index.module.css
+++ b/client/src/components/Stat/index.module.css
@@ -9,7 +9,7 @@
   font-size: 12px;
 }
 .rightAlign {
-  text-align: right;
+  align-items: flex-end;
 }
 
 .measure {
